--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,35 @@
 plugins {
     id 'java'
+    id "io.freefair.lombok" version "5.3.3.3"
+    id 'io.qameta.allure' version '2.8.1'
 }
 
-group 'org.example'
+group 'ru.netology'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 11
 compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
 
+allure {
+    autoconfigure = true
+    version = '2.13.3'
+
+    useJUnit5 {
+        version = '2.13.3'
+    }
+}
 
 repositories {
+    jcenter()
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-    implementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
     testImplementation 'com.codeborne:selenide:5.19.0'
-
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'io.qameta.allure:allure-selenide:2.13.6'
 }
 
 test {
